--- a/.env.example
+++ b/.env.example
@@ -1,38 +1,79 @@
+# ============================================================
+# Minneapolis ICE Activity Monitor - Configuration
+# ============================================================
+# Copy this file to .env and fill in your values
+
 # === Required ===
 DISCORD_WEBHOOK_URL=https://discord.com/api/webhooks/YOUR_ID/YOUR_TOKEN
 
-# === Reddit (Optional - enables Reddit collector) ===
-REDDIT_CLIENT_ID=your_client_id
-REDDIT_CLIENT_SECRET=your_client_secret
-REDDIT_USER_AGENT=ice-monitor:v0.1 (by /u/yourusername)
-
-# === Twitter/X (Optional - enables Twitter collector) ===
-# Uses Playwright with authenticated session for search + profile scraping.
-# Requires: playwright install chromium
-# Note: Runs a headed browser window (X blocks headless).
-# Provide credentials for search/trending access. Cookies are saved
-# to .twitter_cookies.json so login only happens once.
+# === Twitter/X (Optional) ===
+# Uses Playwright browser automation for profile scraping.
+# Login credentials are optional - enables search functionality.
+# Note: Most activist accounts have migrated to Bluesky.
 TWITTER_ENABLED=true
-TWITTER_USERNAME=your_x_username
-TWITTER_PASSWORD=your_x_password
+TWITTER_USERNAME=
+TWITTER_PASSWORD=
+TWITTER_POLL_INTERVAL=120
 
-# === Iceout.org (enabled by default, no keys needed) ===
+# === Reddit (Optional) ===
+# Requires Reddit API credentials from https://www.reddit.com/prefs/apps
+REDDIT_CLIENT_ID=
+REDDIT_CLIENT_SECRET=
+REDDIT_USER_AGENT=ice-monitor:v0.1 (by /u/yourusername)
+REDDIT_POLL_INTERVAL=60
+
+# === Community Platforms (Recommended - No Auth Needed) ===
+# Iceout.org - Crowd-sourced ICE sighting reports
 ICEOUT_ENABLED=true
 ICEOUT_POLL_INTERVAL=90
 
-# === Bluesky (enabled by default, free public API, no auth needed) ===
+# StopICE.net - SMS/web-based alert network
+STOPICE_ENABLED=true
+STOPICE_POLL_INTERVAL=1800
+
+# === Social Media (No Auth Needed) ===
+# Bluesky - Free public API, monitors activist accounts
 BLUESKY_ENABLED=true
 BLUESKY_POLL_INTERVAL=120
 
-# === Tuning (all optional, defaults shown) ===
-TWITTER_POLL_INTERVAL=120
-REDDIT_POLL_INTERVAL=60
+# Instagram - Playwright scraping of public profiles
+INSTAGRAM_ENABLED=true
+INSTAGRAM_POLL_INTERVAL=300
+
+# === RSS Feeds ===
+# Strict filtering - requires real-time signals to pass
 RSS_POLL_INTERVAL=300
-REPORT_MAX_AGE_SECONDS=10800
+
+# === Geographic Filtering ===
+# Center: Downtown Minneapolis (44.9778, -93.2650)
+# 50km radius covers Greater Minneapolis metro area
+MAX_DISTANCE_KM=50.0
+
+# === Correlation Settings ===
+# Reports within this time window can be correlated
 CORRELATION_WINDOW_SECONDS=10800
+
+# Minimum sources for corroboration (except high-priority sources)
+# High-priority sources (Iceout, StopICE) can alert with 1 source
 MIN_CORROBORATION_SOURCES=2
+
+# Content similarity threshold for clustering
 SIMILARITY_THRESHOLD=0.35
+
+# Geographic proximity for clustering (km)
 GEO_PROXIMITY_KM=3.0
+
+# How often to run correlation check (seconds)
+CORRELATION_CHECK_INTERVAL=60
+
+# Stop sending updates for clusters older than this (hours)
+CLUSTER_EXPIRY_HOURS=6.0
+
+# === Report Freshness ===
+# Discard reports older than this (seconds) - 3 hours default
+REPORT_MAX_AGE_SECONDS=10800
+
+# === General ===
 LOG_LEVEL=INFO
 DRY_RUN=false
 DB_PATH=ice_monitor.db
