--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,64 @@
+# Environment and secrets
 .env
 .twitter_cookies.json
+.twitter_account_cache.json
+
+# Database files
 *.db
 *.db-journal
 *.db-wal
+*.db-shm
+
+# Python
 __pycache__/
-*.pyc
+*.py[cod]
+*$py.class
+*.so
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+
+# Virtual environments
 venv/
 .venv/
+ENV/
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# Logs
 logs/*.log
+*.log
+
+# Test output files
+test_*.json
+bluesky_search_results.json
+
+# Claude Code
 .claude/
+
+# OS files
+.DS_Store
+Thumbs.db
+
+# Temporary files
+*.tmp
+*.temp
+nul
